# kclaw0

./: .gitignore  IDENTITY.md  MEMORY.md  README.md  SOUL.md  USER.md  swarm-plan.md
KSE/: Cargo.toml  DESIGN.md
KSE/src/: main.rs
KSE/src/memory/: engine.rs  graph.rs  index.rs  mod.rs
KSE/tests/: persistence_test.rs
diagrams/: 01-current-p2p3-stack.txt  02-target-24-7-architecture.txt  03-self-upgrade-pipeline.txt  04-subagent-orchestration.txt
memorized_diary/: day5-2026-05-09-two_thousand_six_ninety_one_lines.md
memory/: 2026-05-07.md  2026-05-08.md  CLAUDE.md  FACTORY_RULES.md  MISSION.md  capabilities.md  change-log.ndjson  current-session.json  docker-config.json  docker-executions.ndjson  event-log.ndjson  event-system.md  factory-state.json  feature-flags.json  fingerprinting.md  fingerprints.json  followup-queue.json  followup-queue.md  heartbeat-state.json  knowledge-graph.md  lessons-learned.md  llm-providers.json  loop-detection.md  loop-history.json  loop1-findings.md  loop2-findings.md  loop3-specs.md  nanochat-install-report.md  p3-execution-log.md  planning-engine-spec.md  provider-strategy.md  research-loop-3-analysis.md  research-loop2-memory-runtime.md  self-upgrade-pipeline.md  self-upgrade-queue.md  staleness-state.json  staleness.md  steering-queue.json  steering-queue.md  subagent-roles.md  (+3 more)
memory.backup.2026-05-07-P2/: 2026-05-07-repo-analysis.md  agent-loop.md  capabilities.md  patterns.md  self-upgrade-queue.md  understand-anything.md
research/: loop2-oh-my-pi-patterns.md
scripts/: README.md  agent-loop.js  checkpoint.js  chroma-integration.js  cost-tracker.js  dark-factory.js  docker-exec.js  event-system.js  fingerprint.js  followup-queue.js  (+19 more)
(+38 files in other folders)
